--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,9 @@
-/* Add CSS Styling */
+.proportioned.avatar {
+    width: 300px;
+    height: auto;
+}
+
+.distorted.avatar {
+    width: 300px;
+    height: 600px;
+}
