--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -5,10 +5,15 @@ html {
 }
 
 .container {
+  display: grid;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+
+  grid-template-columns: 25% 75%;
+  grid-template-rows: calc(100%/8) calc(100%/8) calc(500%/8) calc(100%/8);
+  gap: 15px;
 }
 
 .container div {
@@ -22,10 +27,12 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-row: 2 / 4;
 }
 
 .nav {
@@ -34,10 +41,12 @@ html {
 
 .article {
   background-color: #7E1DC3;
+  overflow: scroll;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .article p {
